create search pipe, add translation for login, register, checkout, forget-password, slove dynamic routing in building project and improve some responsive design with mobile app

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -77,5 +77,28 @@
     "city": "المدينة",
     "online": "إتمام الشراء عبر الإنترنت",
     "cash": "إتمام الشراء نقدًا"
+  },
+  "wishlistPage": {
+    "wishlistEmpty": "لا توجد عناصر في قائمة الرغبات",
+    "btn": "أضف إلى السلة",
+    "priceCode": "ج.م",
+    "price": "السعر"
+  },
+  "errors": {
+    "emailMsg": "البريد الإلكتروني مطلوب",
+    "passwordMsg": "كلمة المرور مطلوبة",
+    "validEmail": "أدخل بريدًا إلكترونيًا صالحًا",
+    "minlength": "يجب أن يكون الاسم 3 أحرف أو أكثر",
+    "maxlength": "يجب أن يكون الاسم 20 حرفًا أو أقل",
+    "passwordError": "يجب أن تبدأ كلمة المرور بحرف كبير ثم تحتوي على 6 أحرف أو أكثر",
+    "nameMsg": "الاسم مطلوب",
+    "confirmPss": "تأكيد كلمة المرور مطلوب",
+    "incorrectConfirmPass": "تأكيد كلمة المرور غير صحيح",
+    "phoneMsg": "رقم الهاتف مطلوب",
+    "phoneError": "يُقبل فقط أرقام الهواتف المصرية",
+    "codeMsg": "الرمز مطلوب",
+    "codeError": "يجب أن يحتوي الرمز على 6 أرقام",
+    "detailsMsg": "التفاصيل مطلوبة",
+    "cityMsg": "المدينة مطلوبة"
   }
 }
