create all orders, improve footer responsive, improve product details design, slove strip redirect

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -2,6 +2,7 @@
   "navbar": {
     "home": "الرئيسية",
     "products": "المنتجات",
+    "allorders": "كل الطلبات",
     "categories": "الماركات",
     "brands": "العلامات التجارية",
     "logout": "تسجيل الخروج",
@@ -100,5 +101,14 @@
     "codeError": "يجب أن يحتوي الرمز على 6 أرقام",
     "detailsMsg": "التفاصيل مطلوبة",
     "cityMsg": "المدينة مطلوبة"
+  },
+  "ordersPage": {
+    "image": "الصورة",
+    "name": "الاسم",
+    "price": "السعر",
+    "quantity": "الكمية",
+    "total": "الإجمالي",
+    "date": "التاريخ",
+    "priceCode": "ج.م"
   }
 }
