create pagination for products, create not-found page, close all subscription, create readme file for ecommerce, improve some designs

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -16,7 +16,9 @@
     "desc": "سنرسل لك رابطًا، افتحه على هاتفك لتنزيل التطبيق",
     "payments": "شركاء الدفع",
     "delivers": "احصل على التوصيل مع فريش كارت",
-    "btn": "مشاركة رابط التطبيق"
+    "btn": "مشاركة رابط التطبيق",
+    "copyright": "حقوق النشر © جميع الحقوق محفوظة أحمد ياسر",
+    "author": "أحمد ياسر"
   },
   "categories": {
     "title": "الفئات الشائعة"
