improve navbar and improve performance

--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -17,7 +17,7 @@
     "payments": "شركاء الدفع",
     "delivers": "احصل على التوصيل مع فريش كارت",
     "btn": "مشاركة رابط التطبيق",
-    "copyright": "حقوق النشر © جميع الحقوق محفوظة أحمد ياسر",
+    "copyright": "حقوق النشر © جميع الحقوق محفوظة",
     "author": "أحمد ياسر"
   },
   "categories": {
